# aris

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
aris/: README_PROFILES.md  __init__.py  __main__.py  claude_cli_executor.py  cli.py  cli_args.py  cli_flag_manager.py  context_file_manager.py  interaction_handler.py  interrupt_handler.py  logging_utils.py  mcp_service.py  mcp_startup_analyzer.py  orchestrator.py  profile_handler.py  profile_manager.py  profile_mcp_server.py  progress_chunk_processor.py  progress_tracker.py  prompt_formatter.py  session_insights.py  session_state.py  tts_handler.py  voice_handler.py  workflow_mcp_server.py  workspace_manager.py  workspace_monitor.py
aris/profiles/: README.md  default.yaml
aris/profiles/base/: default_assistant_instructions.yaml  manager_guide.yaml  master.yaml
aris/profiles/composite/: profile_manager.yaml
aris/profiles/configs/: .gitignore  README.md  example.mcp-servers.json  profile_mcp_server.json  workflow_orchestrator.mcp-servers.json
tests/aris/: conftest.py  test_claude_cli_executor.py  test_cleanup_behavior.py  test_cli_args.py  test_cli_flag_manager.py  test_cli_init_and_args.py  test_cli_insights_flag.py  test_conditional_mcp_startup.py  test_context_file_manager.py  test_ctrl_c_handling.py  test_env_substitution.py  test_functional_parity.py  test_insights_integration.py  test_interaction_handler.py  test_interrupt_handler.py  test_logging_utils.py  test_mcp_error_handling.py  test_mcp_service.py  test_non_interactive_mode.py  test_orchestration_infrastructure.py  test_orchestrator.py  test_profile_handler.py  test_profile_inheritance_fix.py  test_profile_manager.py  test_profile_mcp_server.py  test_progress_and_formatting_integration.py  test_progress_tracker.py  test_progress_tracker_insights.py  test_prompt_formatter.py  test_response_formatting.py  test_session_insights.py  test_session_state.py  test_tts_handler.py  test_voice_handler.py  test_workspace_integration.py  test_workspace_manager.py  test_workspace_monitor.py  test_yaml_multiline_formatting.py
